Fixed blur on iOS

--- a/src/cdn/helpers/blurs.css
+++ b/src/cdn/helpers/blurs.css
@@ -1,18 +1,8 @@
-.blur,
-.medium-blur {
-  backdrop-filter: blur(1rem);
-}
-
-.small-blur {
-  backdrop-filter: blur(0.5rem);
-}
-
-.large-blur {
-  backdrop-filter: blur(1.5rem);
-}
-
 :is(.blur, .small-blur, .medium-blur, .large-blur),
 :is(.blur, .small-blur, .medium-blur, .large-blur).light {
+  --blur-size: 1rem;
+  -webkit-backdrop-filter: blur(var(--blur-size));
+  backdrop-filter: blur(var(--blur-size));
   color: var(--on-background);
   background-color: rgb(255 255 255 / 0.5);
 }
@@ -20,4 +10,17 @@
 .dark :is(.blur, .small-blur, .medium-blur, .large-blur),
 :is(.blur, .small-blur, .medium-blur, .large-blur).dark {
   background-color: rgb(0 0 0 / 0.5);
+}
+
+.blur,
+.medium-blur {
+  --blur-size: 1rem;
+}
+
+.small-blur {
+  --blur-size: 0.5rem;
+}
+
+.large-blur {
+  --blur-size: 1.5rem;
 }
